[package]
name = "video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
tokio = { version = "1", features = ["full"] }
bytes = "1"
hyper = "0.14"
futures-util = "0.3.29"
serde = { version = "1.0.97", features = ["derive"] }
parking_lot = "0.12.1"
futures = "0.3.29"



